[workspace]
resolver = "2"
members = ["bismark-io", "bismark-dedup", "bismark-extractor", "bismark-methylation-consistency", "bismark-bedgraph", "bismark-coverage2cytosine", "bismark-genome-preparation", "bismark-nome-filtering", "bismark-filter-nonconversion"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
repository = "https://github.com/FelixKrueger/Bismark"
authors = ["Felix Krueger"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
