[workspace]
resolver = "2"
# Post-fold the whole suite is the single `bismark` crate (14 modules + 12
# `src/bin/*.rs` multicall shims). `cargo install bismark` installs all 12 binaries.
members = ["bismark"]
default-members = ["bismark"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
repository = "https://github.com/FelixKrueger/Bismark"
authors = ["Felix Krueger"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

# Measurement-only profile for `samply`/Instruments on Apple Silicon (and perf
# elsewhere): identical codegen to `release` but keeps DWARF so the sampler can
# symbolicate. NEVER built by `just ci` / `just reproduce` / `just build`
# (those use `release`), so the reproducibility + CI gates are untouched.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = false
