[package]
name = "bismark-dedup"
version = "1.2.2"
description = "Rust port of Bismark Perl's deduplicate_bismark script"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bisulfite", "methylation", "bismark", "deduplication", "bioinformatics"]
categories = ["science::bioinformatics", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "deduplicate_bismark"
path = "src/main.rs"

[build-dependencies]
# Build-time only: `last_modified_date()` for the `--help` footer.
bismark-meta = { version = "1.0.0", path = "../bismark-meta" }

[dependencies]
bismark-meta = { version = "1.0.0", path = "../bismark-meta" }
bismark-io = { version = "=1.0.0", path = "../bismark-io" }
# noodles-sam pinned to match bismark-io =1.0.0's transitive choice.
# Needed directly for `Header` (returned by `bismark_io::open_reader`
# via `AnyReader::header`) and for test-helper types.
noodles-sam = "=0.85.0"
clap = { version = "=4.5.30", features = ["derive"] }
rustc-hash = "=2.1.0"
thiserror = "=2.0.18"
anyhow = "=1.0.103"
bstr = "=1.10.0"
# Phase B (v1.2 UMI epic): UmiDedupKey carries the per-record UMI as a
# stack-allocated SmallVec for ≤16-byte UMIs. Matches bismark-io's pin.
smallvec = "=1.13.2"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
# Test-only: synthetic record construction for compute_*_key unit tests.
noodles-core = "=0.20.0"
