[package]
name = "bismark-extractor"
version = "1.0.0-alpha.5"
description = "Rust port of Bismark Perl's bismark_methylation_extractor script (Phase E: + non-Default output modes + --gzip + --mbias_only)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bisulfite", "methylation", "bismark", "extractor", "bioinformatics"]
categories = ["science::bioinformatics", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bismark-methylation-extractor-rs"
path = "src/main.rs"

[dependencies]
bismark-io = { version = "=1.0.0-beta.7", path = "../bismark-io" }
clap = { version = "=4.5.30", features = ["derive"] }
thiserror = "=2.0.0"
# noodles-sam pinned to match bismark-io's transitive choice (matches dedup precedent).
# Used for `Header` in the chr-name lookup table builder (header.rs) and in tests.
noodles-sam = "=0.85.0"
# Phase E: --gzip writer wrapping. Pinned to =1.1.9 to match the workspace's
# existing transitive flate2 (pulled by noodles_bgzf) — verified via
# `cargo tree -p bismark-extractor | grep flate2`. The Phase E plan's
# preliminary "=1.0.34" guess was outdated; rev 1 verification step caught it.
flate2 = "=1.1.9"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
# Used by tests for synthetic record + header construction.
bstr = "=1.10.0"
noodles-core = "=0.20.0"
