[package]
name = "bismark-extractor"
version = "1.0.0-beta.1"
description = "Rust port of Bismark Perl's bismark_methylation_extractor script (Phase G: bedGraph + cytosine_report subprocess chain)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bisulfite", "methylation", "bismark", "extractor", "bioinformatics"]
categories = ["science::bioinformatics", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bismark-methylation-extractor-rs"
path = "src/main.rs"

[dependencies]
bismark-io = { version = "=1.0.0-beta.8", path = "../bismark-io" }
clap = { version = "=4.5.30", features = ["derive"] }
thiserror = "=2.0.0"
# noodles-sam pinned to match bismark-io's transitive choice (matches dedup precedent).
# Used for `Header` in the chr-name lookup table builder (header.rs) and in tests.
noodles-sam = "=0.85.0"
# Phase E: --gzip writer wrapping. Pinned to =1.1.9 to match the workspace's
# existing transitive flate2 (pulled by noodles_bgzf) — verified via
# `cargo tree -p bismark-extractor | grep flate2`. The Phase E plan's
# preliminary "=1.0.34" guess was outdated; rev 1 verification step caught it.
flate2 = "=1.1.9"
# Phase F: bounded MPMC channels for producer→worker (N×32) and
# worker→collector (N×8). Pin verified via cargo tree.
crossbeam-channel = "=0.5.15"
# Phase G: PATH-based subprocess discovery for bismark2bedGraph + coverage2cytosine.
# Cross-platform PATH lookup; honours BISMARK_BIN env override per SPEC §6.6.
which = "=7.0.3"
# (rayon was added then dropped during Phase F implementation. Reason:
# `rayon::ThreadPool::scope()` consumes one pool thread for its closure,
# deadlocking at N=1 with our producer/worker/collector pattern. Switched
# to `std::thread::spawn` for workers; rayon was no longer referenced
# anywhere, so the dep was removed in the post-implementation review pass.)

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
# Used by tests for synthetic record + header construction.
bstr = "=1.10.0"
noodles-core = "=0.20.0"
