[package]
name = "bismark-filter-nonconversion"
version = "1.0.0-beta.1"
description = "Rust port of Bismark Perl's filter_non_conversion script"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bisulfite", "methylation", "bismark", "bioinformatics", "filtering"]
categories = ["science::bioinformatics", "command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "filter_non_conversion_rs"
path = "src/main.rs"

[dependencies]
# Used ONLY for `detect_paired_from_header` (the @PG SE/PE auto-detect). All
# BAM record I/O goes through noodles directly (raw RecordBuf passthrough),
# NOT bismark-io's BismarkRecord reader — that reader drops unmapped reads and
# requires XR/XG, neither of which is faithful to filter_non_conversion's
# verbatim, XM-only, all-records pass-through (SPEC §9, bam2nuc C-1 decision).
bismark-io = { version = "=1.0.0-beta.8", path = "../bismark-io" }
# noodles pins match bismark-io =1.0.0-beta.8's transitive choice so the
# `Header` / `RecordBuf` types are identical across the crate boundary.
noodles-bam = "=0.89.0"
noodles-sam = "=0.85.0"
noodles-bgzf = "=0.47.0"
clap = { version = "=4.5.30", features = ["derive"] }
thiserror = "=2.0.0"
# Multithreaded global allocator (see src/main.rs). Free ~10% sequential win,
# byte-neutral. Same pin as the extractor (#884) and bedgraph (#915).
mimalloc = { version = "=0.1.52", default-features = false }

[dev-dependencies]
assert_cmd = "=2.0.16"
tempfile = "=3.10.1"
# Synthetic BAM fixture construction in integration tests.
noodles-core = "=0.20.0"
bstr = "=1.10.0"
