[package]
name = "bismark-io"
version = "1.0.0"
description = "Bismark-aware BAM/SAM/CRAM I/O on top of noodles"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bisulfite", "methylation", "bismark", "bioinformatics", "noodles"]
categories = ["science::bioinformatics"]

[lib]
path = "src/lib.rs"

[dependencies]
# noodles family — exact-pinned. See DESIGN.md and PLAN.md (rev 3) for rationale.
noodles-bam = "=0.89.0"
noodles-sam = "=0.85.0"
noodles-cram = "=0.93.0"
noodles-fasta = "=0.61.0"
noodles-core = "=0.20.0"
noodles-bgzf = "=0.47.0"
noodles-csi = "=0.50.0"
thiserror = "2"
# Phase B (v1.2 UMI epic): BismarkRecord carries an optional UMI as a
# stack-allocated SmallVec for ≤16-byte UMIs (covers all known Bismark
# workflows; longer UMIs heap-allocate without semantic change).
smallvec = "=1.15.2"
# Plain-gzip `.fa.gz`/`.fasta.gz` support in `genome::` (Perl uses `gunzip -c`);
# MultiGzDecoder also decodes gzip-framed BGZF. Added additively for the
# promoted whole-genome reader; the crate version is unchanged (=1.0.0).
flate2 = "=1.1.9"

[dev-dependencies]
tempfile = "3"
bstr = "1"
proptest = "1"
