[package]
name = "bismark-meta"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared build-time version/provenance metadata for the Bismark Rust suite (internal — not published)"
# Internal-only: this crate captures the SUITE version + git hash at build time
# for every binary's `--version`. It is never published to crates.io.
publish = false

[lib]
path = "src/lib.rs"
